# drf-auth

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
Blog/: settings.py  urls.py
Post/: models.py  serializers.py  tests.py  urls.py  views.py
Post/migrations/: 0001_initial.py
