[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["Samer Odeh <samerodeh220@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
asgiref = "^3.4.1"
django-cors-headers = "^3.8.0"
djangorestframework-simplejwt = "^4.8.0"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
PyJWT = "^2.1.0"
pytz = "^2021.1"
sqlparse = "^0.4.1"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
